fixed layout issues with new weather api

--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,4 +1,4 @@
-@media (min-width:32.5em) {
+@media (min-width:590px) {
     body{
         font-size: 18px;
         width:100%;
@@ -76,7 +76,7 @@
         grid-row: 5/6;
         grid-column: 2/3;
         margin: 41px 8px 0 4px;
-        grid-template-rows: 72px 200px 75px auto;
+        grid-template-rows: 72px 200px 100px 75px auto;
     }
     .weather img{
         width: 200px;
@@ -86,9 +86,16 @@
     }
     .weather p:nth-of-type(1) {
         grid-column: 1/3;
+        grid-row: 3/4;
         margin: auto;
         font-size: 3rem;
         padding: 0;
+    }
+    .weather h2 {
+        grid-row: 4/5;
+    }
+    .weather p:nth-of-type(2) {
+        grid-row: 5/6;
     }
     .footerflex {
         display: flex;
